# whisper-dictate

./: Cargo.toml  README.md  build.rs  goal.txt
.github/workflows/: build.yml  release.yml
src/: main.rs  utils.rs
